--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -20,32 +20,32 @@
       <ion-avatar item-start>McFly
         <img src="/assets/imgs/avatar.png">
       </ion-avatar>
-      <h2 class="feed_userName">{{ userName}}</h2>
-      <p class="feed_date">December 5, 1655</p>
-    </ion-item>avatar
+      <h2 class="feed_userName">{{feed.title}}</h2>
+      <p class="feed_date">{{feed.date}}</p>
+    </ion-item>
 
-    <img src="/assets/imgs/post.png">avatar
+    <img src="/assets/imgs/post.png">
 
     <ion-card-content>
-      <p>Esse tutorial e muito bom.</p>
+      <p>{{feed.description}}</p>
     </ion-card-content>
 
     <ion-row>
       <ion-col>
         <button ion-button icon-start clear small>
           <ion-icon name="thumbs-up"></ion-icon>
-          <div>12 Likes</div>
+          <div>{{feed.qt_likes}}</div>
         </button>
       </ion-col>
       <ion-col>
         <button ion-button icon-start clear small>
           <ion-icon name="text"></ion-icon>
-          <div>4 Comments</div>
+          <div>{{feed.qt_comments}}</div>
         </button>
       </ion-col>
       <ion-col center text-center>
         <ion-note>
-          11h ago
+          {{feed.comment_age}}
         </ion-note>
       </ion-col>
     </ion-row>
