Adicionando um novo menu

--- a/src/pages/intro/intro.html
+++ b/src/pages/intro/intro.html
@@ -23,16 +23,19 @@ tirando o padding(espacamento)
       <p>Testando um novo paragrafo nesse slide :)</p>
       <p><strong>Parece que esta dando certo</strong> </p>
       <!--tag strong e bold-->
+      <a (click)="goToTabsPage()" >continuar</a>
     </ion-slide>
   
     <ion-slide>
         <img src="/assets/imgs/slide2_img.png" class="slides">
       <h2>Slide 2</h2>
+      <a (click)="goToTabsPage()" >continuar</a>
     </ion-slide>
   
     <ion-slide>
         <img src="/assets/imgs/slide3_img.png" class="slides">
       <h2>Slide 3</h2>
+      <a (click)="goToTabsPage()" >continuar</a>
     </ion-slide>
 
     <ion-slide>
