--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,5 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Config" tabIcon="settings"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Feed" tabIcon="cafe"></ion-tab>
 </ion-tabs>
