--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -14,6 +14,10 @@
 
 
 <ion-content padding>
+  <!--Atualizar-->
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+      <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
   <!--looping usando diretiva estrutural-->
   <ion-card *ngFor="let movie of movieList">
 
