Acrescentado botao de detalhes para os filmes

--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -55,6 +55,6 @@
         </ion-note>
       </ion-col>
     </ion-row>
-
+    <button ion-button block (click)='abrirDetalhes(movie)'>Detalhes</button>
   </ion-card>FeedPage
 </ion-content>
