--- a/src/pages/feed/feed.html
+++ b/src/pages/feed/feed.html
@@ -57,4 +57,9 @@
     </ion-row>
     <button ion-button block (click)='abrirDetalhes(movie)'>Detalhes</button>
   </ion-card>FeedPage
+
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+  
 </ion-content>
